--- a/demo/vue-resource.html
+++ b/demo/vue-resource.html
@@ -5,8 +5,8 @@
   <title>Title</title>
   <!-- 最新版本的 Bootstrap 核心 CSS 文件 -->
   <link rel="stylesheet" href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-  <script src="node_modules/vue/dist/vue.js"></script>
-  <script src="node_modules/vue-resource/dist/vue-resource.js"></script>
+  <script src="../node_modules/vue/dist/vue.js"></script>
+  <script src="../node_modules/vue-resource/dist/vue-resource.js"></script>
 </head>
 <body>
   <div id="app" class="container">
@@ -14,6 +14,7 @@
     <a href="javascript:;" class="btn btn-primary" v-on:click="get">Get请求</a>
     <a href="javascript:;" class="btn btn-primary" @click="post">Post请求</a>
     <a href="javascript:;" class="btn btn-primary" @click="jsonp">JSONP请求</a>
+    <a href="javascript:;" class="btn btn-primary" @click="http">http</a>
     <div>
       <span>{{msg}}</span>
     </div>
@@ -23,6 +24,18 @@
       el:"#app",
       data:{
         msg:''
+      },
+      mounted: function () {
+        Vue.http.interceptors.push(function (request,next){
+            console.log("request init.");
+            next(function (response) {
+               console.log("response init.")
+               return response;
+            });
+        });
+      },
+      http:{
+        root:"http://localhost:63342/BuyBao/"
       },
       methods:{
           get: function (){
@@ -51,9 +64,26 @@
               });
           },
           jsonp: function (){
-              this.$http.jsonp("http://www.imooc.com/u/card%20?jsonpcallback=jQuery1910008027457665423343_1519675043455&_=1519675043456").then(function(res){
-                  this.msg = res.data;
-              });
+            this.$http.jsonp("http://www.imooc.com/u/card%20?jsonpcallback=jQuery1910008027457665423343_1519675043455&_=1519675043456").then(function(res){
+              this.msg = res.data;
+            });
+          },
+          http: function () {
+            this.$http({
+              url:"package.json",
+              params:{
+                userId:"103"
+              },
+              headers:{
+                token:"123"
+              },
+              timeout:5,
+              before: function () {
+                console.log("before init")
+              }
+            }).then(function (res) {
+              this.msg = res.data;
+            });
           }
       }
     });
